# Nomad-Swarm

./: README.md
swarm-orchestrator/: .gitignore  Dockerfile  README.md  pyproject.toml
swarm-orchestrator/config/: default.toml  topology.example.toml
swarm-orchestrator/src/orchestrator/: __init__.py  config.py  main.py
swarm-orchestrator/src/orchestrator/federation/: __init__.py  crypto.py  publisher.py  subscriber.py
swarm-orchestrator/src/orchestrator/llm/: prompts.py  summarizer.py
swarm-orchestrator/src/orchestrator/matrix/: __init__.py  client.py  transcript.py
swarm-orchestrator/src/orchestrator/models/: summary.py  topology.py
swarm-orchestrator/src/orchestrator/rag/: store.py
swarm-orchestrator/src/orchestrator/rounds/: controller.py
swarm-orchestrator/src/orchestrator/topology/: __init__.py  manager.py
swarm-orchestrator/tests/: conftest.py  test_crypto.py  test_round_controller.py  test_summarizer.py  test_summary_model.py  test_transcript_buffer.py
